the bgfx test are basically done. the API needs a bit of tweaking, cause bgfx sucks

--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -357,5 +357,7 @@
     <None Include="resources\shaders\varying.def.sc" />
     <None Include="resources\shaders\cube.shader" />
     <None Include="resources\shaders\instance_cube.shader" />
+    <None Include="resources\shaders\instance_testFS.sc" />
+    <None Include="resources\shaders\instance_testVS.sc" />
   </ItemGroup>
 </Project>
