--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -568,6 +568,8 @@
     <None Include="resources\shaders\cube.shader" />
     <None Include="resources\shaders\default.shader" />
     <None Include="resources\shaders\instance_cube.shader" />
+    <None Include="resources\shaders\instance_testFS.sc" />
+    <None Include="resources\shaders\instance_testVS.sc" />
     <None Include="resources\shaders\varying.def.sc" />
     <None Include="resources\shaders\fluid.shader" />
     <None Include="resources\shaders\instance_test.shader" />
