reorganizing the file structure

--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -452,9 +452,9 @@
     <ClCompile Include="arbrook\core\logging\loggingservice.cpp" />
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
-    <ClCompile Include="arbrook\rendering\data\buffercache.cpp" />
-    <ClCompile Include="arbrook\rendering\data\texturecache.cpp" />
-    <ClCompile Include="arbrook\rendering\data\shadercache.cpp" />
+    <ClCompile Include="arbrook\rendering\cache\buffercache.cpp" />
+    <ClCompile Include="arbrook\rendering\cache\texturecache.cpp" />
+    <ClCompile Include="arbrook\rendering\cache\shadercache.cpp" />
     <ClCompile Include="arbrook\rendering\pipeline\pipeline.cpp" />
     <ClCompile Include="arbrook\rendering\pipeline\pipelineprovider.cpp" />
     <ClCompile Include="arbrook\rendering\pipeline\renderstage.cpp" />
@@ -497,39 +497,39 @@
     <ClInclude Include="arbrook\rendering\components\camera.hpp" />
     <ClInclude Include="arbrook\rendering\components\mesh_renderer.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
-    <ClInclude Include="arbrook\rendering\data\buffercache.hpp" />
+    <ClInclude Include="arbrook\rendering\cache\buffercache.hpp" />
     <ClInclude Include="arbrook\rendering\data\bufferhandle.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\buffer.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\dx11includes.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\enumtypes.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\inputlayout.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\renderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\shader.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\texture.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\window.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\enumtypes.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\ibuffer.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\iinputlayout.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\ishader.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\buffer.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\dx11includes.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\enumtypes.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\inputlayout.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\renderinterface.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\texture.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\DirectX\window.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\enumtypes.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\ibuffer.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\iinputlayout.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\ishader.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\itexture.hpp" />
     <ClInclude Include="arbrook\rendering\data\mesh.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\enumtypes.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\inputlayout.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\window.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\enumtypes.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\inputlayout.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\texture.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\window.hpp" />
     <ClInclude Include="arbrook\rendering\data\renderingtest.hpp" />
     <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\shadersource.hpp" />
     <ClInclude Include="arbrook\rendering\data\texturehandle.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp" />
-    <ClInclude Include="arbrook\rendering\data\config.hpp" />
-    <ClInclude Include="arbrook\rendering\data\definitions.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\shader.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\renderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\irenderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\texturecache.hpp" />
-    <ClInclude Include="arbrook\rendering\data\shadercache.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\window.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\buffer.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\config.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\definitions.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\OpenGL\renderinterface.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\irenderinterface.hpp" />
+    <ClInclude Include="arbrook\rendering\cache\texturecache.hpp" />
+    <ClInclude Include="arbrook\rendering\cache\shadercache.hpp" />
+    <ClInclude Include="arbrook\rendering\interface\window.hpp" />
     <ClInclude Include="arbrook\rendering\data\textureparameters.hpp" />
     <ClInclude Include="arbrook\rendering\data\vertex.hpp" />
     <ClInclude Include="arbrook\rendering\data\vertexattribute.hpp" />
